applications/homebridge/overlays/ingress/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    route.openshift.io/termination: edge
    cert-manager.io/cluster-issuer: letsencrypt
  name: homebridge
  namespace: homebridge
spec:
  tls:
    - hosts:
        - homebridge.hknrd.io
      secretName: homebridge-tls
  rules:
    - host: homebridge.hknrd.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homebridge
                port:
                  number: 8096
